# rinha2501

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix  maskfile.md  shell.nix  transacoes.http
src/: arguments.rs  http_server.rs  main.rs  model.rs  shared_memory.rs
