[package]
name = "rinha2501"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
may = "0.3.51"
may_minihttp = "0.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "http2"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
debug = false
incremental = false
overflow-checks = false
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'

[profile.profiling]
inherits = "release"
debug = true
